// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dataset details panel component renders correctly 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "createTime": "2019-06-11",
    "description": "Test description",
    "id": 1,
    "modTime": "2019-06-10",
    "name": "Test 1",
    "type": Object {
      "id": 2,
      "name": "Test 2",
    },
  },
}
`;

exports[`Dataset details panel component renders type tab when present in the data 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "createTime": "2019-06-11",
    "description": "Test description",
    "id": 1,
    "modTime": "2019-06-10",
    "name": "Test 1",
    "type": Object {
      "description": "Test type description",
      "id": 7,
      "name": "Test type",
    },
  },
}
`;
